--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "np": "np --no-2fa"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.16.7",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/dom": "^8.1.0",
-    "@types/jest": "^27.0.1",
-    "babel-jest": "^27.0.6",
-    "jest": "^27.0.6",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@hotwired/stimulus": "^3.0.1",
+    "@testing-library/dom": "^8.11.1",
+    "@types/jest": "^27.4.0",
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7",
     "mutationobserver-shim": "^0.3.7",
-    "np": "^7.5.0",
+    "np": "^7.6.0",
     "prettier-standard": "16.4.1",
-    "stimulus": "^2.0.0",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.4"
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10"
   },
   "peerDependencies": {
-    "stimulus": "^2.0.0"
+    "@hotwired/stimulus": "^3.0.1"
   },
   "jest": {
     "testEnvironment": "jsdom",
