--- a/package.json
+++ b/package.json
@@ -30,20 +30,25 @@
     "np": "np --no-2fa"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
+    "@babel/core": "^7.20.7",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@hotwired/stimulus": "^3.0.1",
-    "@testing-library/dom": "^8.11.1",
-    "@types/jest": "^27.4.0",
-    "babel-jest": "^27.4.6",
-    "jest": "^27.4.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@hotwired/stimulus": "^3.2.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@testing-library/dom": "^8.19.1",
+    "@types/jest": "^29.2.4",
+    "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "mutationobserver-shim": "^0.3.7",
-    "np": "^7.6.0",
+    "np": "^7.6.2",
+    "postcss": "^8.4.20",
     "prettier-standard": "16.4.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.10"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3"
   },
   "peerDependencies": {
     "@hotwired/stimulus": "^3.0.1"
