--- a/.npmignore
+++ b/.npmignore
@@ -6,12 +6,9 @@ index.html
 netlify.toml
 .node-version
 .eslintrc.js
-src
-specs
+spec
 tsconfig.json
-vite.config.js
+vite.config.mjs
 .prettierignore
-.eslintignore
-.prettierrc
 postcss.config.js
 tailwind.config.js
